--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Explore my Flutter Web Portfolio – showcasing my projects, skills, and journey as a Flutter developer.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="portpolio">
+  <meta name="apple-mobile-web-app-title" content="Portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>portpolio</title>
+  <title>Portfolio</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Open Graph (for better link previews on WhatsApp, LinkedIn, etc.) -->
+  <meta property="og:title" content="Muhammad Awais Khan | Flutter Developer Portfolio">
+  <meta property="og:description" content="Interactive Flutter Web Portfolio featuring mobile-inspired UI, skills, and real projects.">
+  <meta property="og:url" content="https://awaisok91.github.io">
+  <meta property="og:type" content="website">
+  <!-- Optional preview image -->
+  <!-- <meta property="og:image" content="https://your-image-url.com/image.png"> -->
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
